--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -5,23 +5,14 @@
 <style>
     .home-container{
         display: grid;
-        grid-template-columns: 0.8fr 3.2fr;
+        grid-template-columns: 1fr 3fr 1fr;
     }
 </style>
 
 <div class="home-container">
 
     <div>
-        <h3>Browse Topics</h3>
-        <hr>
-        <div>
-            <a href="{% url 'home' %}">ALL</a>
-        </div>
-        {% for topic in topics %}
-        <div>
-            <a href="{% url 'home' %}?q={{topic.name}}">{{topic.name}}</a>
-        </div>
-        {% endfor %}
+        {% include 'base/topic_component.html' %}
     </div>
 
     <div>
@@ -32,8 +23,10 @@
         <div>
             {% for room in rooms %}
             <div>  
+                {% if request.user == room.host %}
                 <a href="{% url 'update-room' room.id %}">Edit </a>
                 <a href="{% url 'delete-room' room.id %}">Delete </a>
+                {% endif %}
                 <span>@{{room.host.username}}</span>
                 <h3>
                     {{room.id}} <a href="{% url 'room' room.id %}">{{room.name}}</a>
@@ -43,6 +36,10 @@
             </div>
             {% endfor %}
         </div>
+    </div>
+    
+    <div>
+        {% include 'base/activity_component.html' %}
     </div>
 </div>
 
