--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -1,6 +1,7 @@
 {% extends 'main.html' %}
 {% block content %}
 
+{% if page == 'login' %}
 <div>
     <form action="" method="post">
         {% csrf_token %}
@@ -13,6 +14,22 @@
         
         <input type="submit" value='Login'>
     </form>
-</div>
 
+    <p>Haven't signed up yet?</p>
+    <a href="{%url 'register'%}">Sign Up</a>
+
+</div>
+{% else %} 
+<div>
+    <form action="" method="post">
+        {% csrf_token %}
+
+        {{ form.as_p }}
+
+        <input type="submit" value='Register'>
+    </form>
+    <p>Already Signed Up?</p>
+    <a href="{%url 'login'%}">LogIn</a>
+</div>
+{% endif %}
 {% endblock content %}
